setup-scripts/OLD/99-demoapp/demoapp-ingress-istio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp-ingress
  namespace: demoapp
spec:
  ingressClassName: istio
  tls:
    - secretName: k8s2-cert
      hosts:
      - demoapp.k8s2.feri.ai   
  rules:
  - host: "demoapp.k8s2.feri.ai"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: demoapp-service
              port:
                number: 80
